<resources>
    <string name="app_name">tp_ecommerce_formation_android</string>
    <string name="information_separator">•</string>
    <string name="available">Disponible</string>
    <string name="unavailable">Stock épuisé</string>
    <string name="details">Détails</string>
    <string name="add_to_cart">Ajouter au panier</string>
    <string name="rate_count">%1$.1f/5 sur %2$d avis</string>
    <string name="home">Accueil</string>
    <string name="category">Categorie</string>
    <string name="favorite">Favoris</string>
    <string name="account">Compte</string>
    <string name="shops">Magasins</string>
    <string name="application_name">Tech\'Shop</string>
    <string name="search_product">Rechercher un produit</string>
    <string name="your_last_purchases">Vos derniers achats</string>
    <string name="category_title">Catégories de produits</string>
    <string name="product_list_title">Produits</string>
    <string name="product">Produit</string>
    <string name="next">Suivant</string>
    <string name="product_image">Image du produit %1$s</string>
    <string name="add_to_favorite">Ajouter aux favoris</string>
    <string name="category_image">Image de la catégorie $1%s</string>
    <string name="empty_product_list">Aucun produit correspondant à votre recherche</string>
    <string name="error_while_loading_category_list">Une erreur est servenue lors du chargement des catégories. Veuillez réessayer plus tard.</string>
    <string name="error_while_loading_product_list">Une erreur est servenue lors du chargement des produits. Veuillez réessayer plus tard.</string>
    <string name="error_while_loading_product">Une erreur est servenue lors du chargement de ce produit. Veuillez réessayer plus tard.</string>
</resources>