<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_navigation_graph"
    app:startDestination="@id/navigation_category_list">

    <fragment
        android:id="@+id/navigation_category_list"
        android:name="com.example.tp_ecommerce_formation_android.ui.page.category.list.CategoryListFragment"
        android:label="@string/category_title" >
        <action
            android:id="@+id/action_navigation_category_list_to_navigation_product_list"
            app:destination="@id/navigation_product_list"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_product_list"
        android:name="com.example.tp_ecommerce_formation_android.ui.page.product.list.ProductListFragment"
        android:label="@string/product_list_title"
        tools:layout="@layout/fragment_product_list" >
        <action
            android:id="@+id/action_navigation_product_list_to_navigation_product_details"
            app:destination="@id/navigation_product_details" />
        <argument
            android:name="categoryId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_product_details"
        android:name="com.example.tp_ecommerce_formation_android.ui.page.product.details.ProductDetailsFragment"
        android:label="@string/product" >
        <argument
            android:name="productId"
            app:argType="string" />
    </fragment>
</navigation>