<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.page.home.HomeFragment">

    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/application_name"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/application_name"
        tools:text="Bonjour, John" />

    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorSurfaceContainerHigh"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintTop_toBottomOf="@id/welcome_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_menu" />

            <EditText
                android:id="@+id/search_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search_product"
                android:paddingHorizontal="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_search" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/last_purchases_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/your_last_purchases"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintStart_toStartOf="@+id/search_bar"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_purchases_title"
        tools:itemCount="3"
        tools:listitem="@layout/home_carousel_item" />


</androidx.constraintlayout.widget.ConstraintLayout>